--- a/JuxtaposeTimeline.html
+++ b/JuxtaposeTimeline.html
@@ -9,7 +9,7 @@
   <meta name="author" content="Insert the content author or owner name here">
 
   <!-- Link to your JS file -->
-  <script src="scripts/script.js"></script>
+
 
   <!-- Link to your CSS file -->
   <link rel="stylesheet" href="css/style.css">
@@ -38,27 +38,15 @@
 
 <body>
 
-
+<h1>Julie Andrews' Many Professions Over the Years</h1>
 
 <iframe src='https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=v2%3A2PACX-1vQvhUHrl6cxNAM_aQ2psVv1qBrTn4FDt3AzsfpdoWX3jqoMcEKL4J__0Mw94y0xVEU6y4IcHp3HUMAC&font=Default&lang=en&initial_zoom=2&width=100%25&height=650' width='100%' height='650' webkitallowfullscreen mozallowfullscreen allowfullscreen frameborder='0'></iframe>
 
+
 <iframe frameborder="0" class="juxtapose" width="100%" height="618.75" src="https://cdn.knightlab.com/libs/juxtapose/latest/embed/index.html?uid=b2113210-2952-11f0-bb23-0936e1cb08fb"></iframe>
 
-<div align="center">
-<h1>Julie Andrews Professions Over the Years</h1>
-</div>
 
-
-
-
-
-
-
-
-
-
-
-
+<p>For the Knight Labs Timeline assignment, I decided to create a timeline featuring the various gigs held by Julie Andrews throughout her lifetime who is primarily known for her film-acting. She is arguable my family's favorite actress for the humor she brings to her characters and catchy songs she brings to her musicals. For the Knight Labs Juxtapose assignment, I decided to create a before and after slider of how the Eiffel Tower looks at night versus in the day time. </p>
 
 
 </body>
